objects/GEMS_Benefit_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>AccountStructureCase__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Structure Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>GEMS_Benefit_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Agreements</relationshipLabel>
        <relationshipName>GEMS_Benefit_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Member_Count__c</fullName>
        <description>Active Member Counts received from Bluestar</description>
        <label>BA Member Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_Description__c</fullName>
        <label>BA Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Fund_Type__c</fullName>
        <label>BA Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>BASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Assoc__c</fullName>
        <label>Billing Assoc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <label>Billing Profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copays__c</fullName>
        <label>Copays</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Type__c</fullName>
        <label>Dental Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_BAs_SpHandling__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Gems BA&apos;s for special handling to create Downstream cases for only these selected BA&apos;s.</description>
        <label>BAs for Downstream Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Group_Sections__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Group Sections?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Type__c</fullName>
        <label>ID Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDescUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDescUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA Plan</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Plan__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>GEMS Benefit Agreements</relationshipLabel>
        <relationshipName>GEMS_Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prescription_Drug_Type__c</fullName>
        <label>Prescription Drug Type</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <description>Used for integration purpose</description>
        <label>Product Number (Integration)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>Used for integration purpose</description>
        <label>Product Type (Integration)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>IF(ISNUMBER(Plan__r.External_Id__c), VALUE(Plan__r.External_Id__c), VALUE(RIGHT(Plan__r.External_Id__c, 4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Plan__r.Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GEMS Benefit Agreements</relationshipLabel>
        <relationshipName>GEMS_Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>TX Only</description>
        <label>Schedule</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>GEMS Benefit Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsNew__c</columns>
        <columns>IsCancelled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BA No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Benefit Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Length5Digit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(LEN( Name ) = 4),NOT($Profile.Name=&apos;Integration Profile&apos;),NOT($Profile.Name=&apos;System Administrator&apos;))</errorConditionFormula>
        <errorMessage>BA No. - Expecting a 4-digit number</errorMessage>
    </validationRules>
</CustomObject>